styles/swiper.css
.swiper {
  width: 100%;
  height: 120%;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;

  /* Center slide text vertically */
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}

.swiper-slide img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* target the active bullet */
span.swiper-pagination-bullet.swiper-pagination-bullet-active {
  background-color: #23ce6b;
  opacity: 1;
  height: 2rem;
  width: 2rem;
}

/* target all bullets */
span.swiper-pagination-bullet {
  background-color: transparent;
  color: #fff;
  opacity: 1;
  height: 2rem;
  width: 2rem;
}

